change color and fix bug on tablet

--- a/src/sass/components/_homePage.scss
+++ b/src/sass/components/_homePage.scss
@@ -1,5 +1,5 @@
 .main_section {
-  background-image: url('../images/popcorn2.png');
+  // background-image: url('../images/popcorn2.png');
   background-repeat: repeat;
   background-size: 100%;
 
@@ -56,7 +56,7 @@
 .filmlist__title {
   font-size: 20px;
   padding-left: 15px;
-  margin-bottom: 15px;
+  padding-bottom: 15px;
 
   @include for-size(tablet) {
     font-size: 25px;
