--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -56,9 +56,17 @@
   width: 260px;
   height: 404px;
   border-radius: 10px;
+
   @media screen and (min-width: 320px) and (max-width: 767px) {
-    width: 280px;
-    height: 416px;
+    width: auto;
+    height: auto;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1023px){
+      width: 300px;
+      height: 450px;
+      padding: 20px;
+      padding-top: 50px;
   }
 }
 .cardItem__wrapper {
@@ -206,24 +214,17 @@
     margin-top: 0px;
     display: flex;
   }
-  .cardItem__image {
-    display: block;
-    width: auto;
-    height: auto;
-    padding-top: 0px;
-    border-radius: 10px;
+
+  .cardItem__wrapper {
+    width: 323px;
+    // height: auto;
   }
 
   .cardItem {
     display: flex;
   }
 
-  .cardItem__image {
-    width: 295px;
-    padding: 20px;
-  }
-
-  .cardItem__name {
+    .cardItem__name {
     font-size: 25px;
     line-height: 35px;
   }
@@ -320,7 +321,7 @@
   margin-bottom: 6px;
 
   @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 180px;
+    width: 160px;
     font-size: 14px;
   }
 
